# symmetrical-engine

client/: Cargo.toml
client/src/: config.rs  listener.rs  main.rs  web.rs
client/src/task/: mod.rs  windows.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  monitor.rs  route.rs  types.rs
