[package]
name = "firendo-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
kstool-helper-generator = "0.4"
log = { version = "0.4", features = [
    "release_max_level_trace",
    "max_level_trace",
] }
notify = "6.1.1"
once_cell = "^1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tap = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
